--- a/src/Components/Destinations/Destinations.scss
+++ b/src/Components/Destinations/Destinations.scss
@@ -45,8 +45,15 @@
     .secContainer {
         display: grid;
         gap: 1.5rem;
-        grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); 
-        justify-content: center;
+        grid-template-columns: repeat(3, 1fr); 
+        
+        @media (max-width: 1024px) {
+            grid-template-columns: repeat(2, 1fr); 
+        }
+
+        @media (max-width: 768px) {
+            grid-template-columns: 1fr; 
+        }
     }
 
     .singleCard {
