--- a/src/Components/Header/Header.scss
+++ b/src/Components/Header/Header.scss
@@ -41,11 +41,11 @@
     padding: 1.5rem;
     transition: 0.4s ease-in-out;
 
-    .logoDiv{
+    .logoDiv {
         display: flex;
         align-items: center;
         
-            .logo {
+        .logo {
             color: var(--primaryColor);
             font-weight: 900;
             font-size: var(--h1FontSize);
@@ -63,6 +63,7 @@
         }
     }
 
+    // Styles for the menu when displayed on larger screens
     .menu {
         display: flex;
         align-items: center;
@@ -220,6 +221,12 @@
     }
 }
 
+@media screen and (min-width: 948px) {
+    .toggleIcon, .closeIcon {
+        display: none;
+    }
+}
+
 .auth-modal {
     position: fixed;
     top: 50%;
@@ -244,3 +251,37 @@
 .close-modal:hover {
     background: var(--hoverColor);
 }
+
+.profile-section {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+}
+
+.profile-icon {
+    background-color: var(--primaryColor);
+    color: white;
+    width: 35px;
+    height: 35px;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 1.2rem;
+    cursor: pointer;
+}
+
+.logout-btn {
+    background-color: var(--hoverColor);
+    color: #fff;
+    padding: 0.5rem 1rem;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+.logout-btn:hover {
+    background-color: var(--primaryColor);
+}
+
