--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -189,6 +189,11 @@
   top: 7rem;
 }
 
+@media screen and (min-width: 948px) {
+  .toggleIcon, .closeIcon {
+    display: none;
+  }
+}
 .auth-modal {
   position: fixed;
   top: 50%;
