--- a/src/Components/Header/Auth.scss
+++ b/src/Components/Header/Auth.scss
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
+// Default Page styling
 * {
     padding: 0;
     margin: 0;
@@ -8,6 +9,7 @@
     scroll-behavior: smooth;
 }
 
+// Color Scheme and Variables
 :root {
     --primaryColor: hsl(233, 52%, 19%);
     --secColor: hsl(233, 16%, 44%);
@@ -30,6 +32,7 @@
     --smallestFontSize: 0.75rem;
 }
 
+// General Container for the Auth Components
 .auth-container {
     max-width: 400px;
     margin: 2rem auto;
@@ -199,11 +202,11 @@
     text-align: center;
     font-size: var(--normalFontSize);
     color: var(--primaryColor);
-    display: none; 
+    display: none; // Hidden by default
 }
 
 .message-box.show {
-    display: block; 
+    display: block; // Show when active
 }
 
 .message-box button {
